--- a/01/.babelrc
+++ b/01/.babelrc
@@ -2,5 +2,8 @@
   "presets": [
     "@babel/preset-env",  // 解析 ES6
     "@babel/preset-react"  // 解析 React
-  ]
+  ],
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import"
+]
 }
