--- a/02/package.json
+++ b/02/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
-    "build:ssr": "webpack --config webpack.ssr.js"
+    "build:ssr": "webpack --config webpack.ssr.js",
+    "dll": "webpack --config webpack.dll.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
@@ -35,11 +37,14 @@
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
+    "happypack": "^5.0.1",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-inline-css-webpack-plugin": "^1.2.1",
     "html-loader": "^0.5.5",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.6.0",
@@ -47,19 +52,25 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
+    "purgecss-webpack-plugin": "^1.6.0",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "^0.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^2.6.3",
+    "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^2.2.1",
+    "thread-loader": "^2.1.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.31.0",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "lib-flexible": "^0.3.2"
   }
 }
